GNOME Bugzilla – Bug 697884
multipartdemux and jpegparse do not link
Last modified: 2013-04-14 11:45:41 UTC
Created attachment 241358 [details] [review] supplied fix Multipartdemux do not link with jpegparse as jpegparse requires parsed to be false, while it is omitted by multipartdemux. Supplied fix removes the requirement by jpegparse and simply allows linking no matter the value of 'parsed'.
Thanks, pushed: commit 90229af34c3e8d16d340de8309b12f8681da584b Author: Alexander Olsson <alexo@axis.com> Date: Fri Apr 12 17:01:38 2013 +0200 jpegparse: accept any jpeg input - parsed, unparsed or unmarked The src element may not include information about whether the data is parsed or not. Hence do not require parsed=false. Fixes multipartdemux ! jpegparse ! ... https://bugzilla.gnome.org/show_bug.cgi?id=697884