jpegparse: accept any jpeg input - parsed, unparsed or unmarked

The src element may not include information about whether
the data is parsed or not. Hence do not require parsed=false.

Fixes multipartdemux ! jpegparse ! ...

https://bugzilla.gnome.org/show_bug.cgi?id=697884